[ADD] swagger docs Auth endpoints
