# app/Http/Controllers/AuthController.php
@@ -4,30 +4,37 @@ namespace App\Http\Controllers;
 
 use Illuminate\Http\Request;
 
-/**
- * @OA\Info(
- *      title="API Swagger",
- *      version="1.0",
- *      description="API CRUD Students"
- * )
- * 
- * @OA\Server(
- *      url="http://localhost:8000",
- * )
- */
-class AuthController extends Controller
+
+class AuthController extends BaseController
 {
 
     /**
      * @OA\Post(
-     *      path="/api/login",
-     *      tags={"Auth"},
-     *      summary="Login",
-     *      description="Login",
-     *      @OA\Response(
-     *          response=200,
-     *          description="Successful operation",
-     *      )          
+     *     path="/api/login",
+     *     summary="User login",
+     *     tags={"Auth"},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             required={"email", "password"},
+     *             @OA\Property(property="email", type="string", format="email", example="user@example.com"),
+     *             @OA\Property(property="password", type="string", example="password123"),
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful login",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="token", type="string", example="your-jwt-token")
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Invalid credentials",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Invalid credentials")
+     *         ),
+     *     ),
      * )
      */
     public function login(Request $request)
@@ -56,6 +63,36 @@ class AuthController extends Controller
         );
     }
 
+    /**
+     * @OA\Get(
+     *     path="/api/me",
+     *     summary="Get user info",
+     *     tags={"Auth"},
+     *     security={{"bearerAuth":{}}},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(
+     *              @OA\Property(property="user", type="object",
+     *              @OA\Property(property="user", type="object",
+     *                  @OA\Property(property="id", type="integer", example=1),
+     *                  @OA\Property(property="name", type="string", example="John"),
+     *                  @OA\Property(property="email", type="string", format="email", example="user@example.com"),
+     *                  @OA\Property(property="created_at", type="string", format="date-time", example="2024-07-11T00:00:00.000000Z"),
+     *                  @OA\Property(property="updated_at", type="string", format="date-time", example="2024-07-11T00:00:00.000000Z"),
+     *              ),
+     *             ),   
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthorized",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", example="Unauthenticated."),
+     *          ),
+     *     ),
+     * )
+     */
     public function me()
     {
         return response()->json([
@@ -63,6 +100,28 @@ class AuthController extends Controller
         ]);
     }
 
+    /**
+     * @OA\Get(
+     *     path="/api/refresh",
+     *     summary="Refresh token",
+     *     tags={"Auth"},
+     *     security={{"bearerAuth":{}}},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="token", type="string"),
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthenticated.",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Unauthenticated."), 
+     *         ),
+     *     ),
+     * )
+     */
     public function refresh()
     {
         return response()->json([
@@ -70,6 +129,29 @@ class AuthController extends Controller
         ]);
     }
 
+
+    /**
+     * @OA\Get(
+     *     path="/api/logout",
+     *     summary="User logout",
+     *     tags={"Auth"},
+     *     security={{"bearerAuth":{}}},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="User logged out successfully"),
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthenticated.",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Unauthenticated."), 
+     *         ),
+     *     ),
+     * )
+     */
     public function logout()
     {
         auth()->logout();
